--- a/components/nds-button/package.json
+++ b/components/nds-button/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@nice-digital/nds-button",
-	"version": "1.2.11-alpha.0",
+	"version": "1.2.11",
 	"description": "Button component for the NICE Design System",
 	"author": "Ian Routledge <ian.routledge@nice.org.uk>",
 	"homepage": "https://design-system.nice.org.uk/",
@@ -34,7 +34,7 @@
 		"url": "https://github.com/nice-digital/nice-design-system/issues"
 	},
 	"dependencies": {
-		"@nice-digital/nds-core": "^1.2.11-alpha.0",
+		"@nice-digital/nds-core": "^1.2.11",
 		"classnames": "^2.2.6",
 		"prop-types": "^15.7.2"
 	},
