--- a/components/nds-core/package.json
+++ b/components/nds-core/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@nice-digital/nds-core",
-	"version": "1.2.11-alpha.0",
+	"version": "1.2.11",
 	"description": "Core code for the NICE Design System",
 	"author": "Ian Routledge <ian.routledge@nice.org.uk>",
 	"contributors": [
@@ -33,7 +33,7 @@
 		"url": "https://github.com/nice-digital/nice-design-system/issues"
 	},
 	"dependencies": {
-		"@nice-digital/icons": "^2.2.7-alpha.0",
+		"@nice-digital/icons": "^2.2.7",
 		"prop-types": "^15.7.2",
 		"sass-mq": "^5.0.0"
 	},
