--- a/components/nds-enhanced-pagination/package.json
+++ b/components/nds-enhanced-pagination/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@nice-digital/nds-enhanced-pagination",
-	"version": "1.0.5-alpha.0",
+	"version": "1.0.5",
 	"description": "Enhanced pagination component for the NICE Design System",
 	"author": "Warren Keith <w@rren.dev>",
 	"keywords": [
