--- a/components/nds-grid/package.json
+++ b/components/nds-grid/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@nice-digital/nds-grid",
-	"version": "1.2.12-alpha.0",
+	"version": "1.2.12",
 	"description": "Grid component for the NICE Design System",
 	"keywords": [
 		"grid"
@@ -37,7 +37,7 @@
 		"url": "https://github.com/nice-digital/nice-design-system/issues"
 	},
 	"dependencies": {
-		"@nice-digital/nds-core": "^1.2.11-alpha.0",
+		"@nice-digital/nds-core": "^1.2.11",
 		"classnames": "^2.2.6",
 		"prop-types": "^15.7.2"
 	},
