--- a/components/nds-action-banner/package.json
+++ b/components/nds-action-banner/package.json
@@ -36,6 +36,7 @@
 	"dependencies": {
 		"@nice-digital/icons": "^2.2.7",
 		"@nice-digital/nds-core": "^1.2.11",
+		"classnames": "^2.3.1",
 		"prop-types": "^15.7.2"
 	},
 	"peerDependencies": {
