--- a/components/nds-table/package.json
+++ b/components/nds-table/package.json
@@ -35,6 +35,7 @@
 	},
 	"dependencies": {
 		"@nice-digital/nds-core": "^1.2.11",
+		"classnames": "^2.3.1",
 		"prop-types": "^15.7.2"
 	},
 	"peerDependencies": {
@@ -42,8 +43,7 @@
 		"react-dom": "^16 || ^17"
 	},
 	"devDependencies": {
-		"@babel/cli": "^7.5.0",
-		"classnames": "^2.2.6"
+		"@babel/cli": "^7.5.0"
 	},
 	"gitHead": "b70a1e39df19c1943a000c841aca8d9bb3ef4ff1"
 }
