--- a/components/design-system/package.json
+++ b/components/design-system/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nice-digital/design-system",
-  "version": "1.2.30",
+  "version": "1.2.31-alpha.0",
   "description": "Your source for quickly creating consistent on-brand NICE digital services",
   "author": "Ian Routledge <ian.routledge@nice.org.uk>",
   "homepage": "https://design-system.nice.org.uk/",
@@ -38,7 +38,7 @@
     "@nice-digital/nds-breadcrumbs": "^1.2.13",
     "@nice-digital/nds-button": "^1.2.11",
     "@nice-digital/nds-callout": "^1.1.13",
-    "@nice-digital/nds-card": "^1.2.13",
+    "@nice-digital/nds-card": "^1.2.14-alpha.0",
     "@nice-digital/nds-checkbox": "^1.2.11",
     "@nice-digital/nds-container": "^1.0.7",
     "@nice-digital/nds-core": "^1.2.11",
@@ -61,7 +61,7 @@
     "@nice-digital/nds-simple-pagination": "^1.2.11",
     "@nice-digital/nds-stacked-nav": "^1.2.12",
     "@nice-digital/nds-table": "^1.1.14",
-    "@nice-digital/nds-tabs": "^1.2.15",
+    "@nice-digital/nds-tabs": "^1.2.16-alpha.0",
     "@nice-digital/nds-tag": "^1.2.11",
     "@nice-digital/nds-textarea": "^1.2.11",
     "normalize.css": "8.0.1",
