--- a/components/nds-tabs/package.json
+++ b/components/nds-tabs/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@nice-digital/nds-tabs",
-	"version": "1.2.15",
+	"version": "1.2.16-alpha.0",
 	"description": "Tabs component for the NICE Design System",
 	"author": "Ian Routledge <ian.routledge@nice.org.uk>",
 	"homepage": "https://design-system.nice.org.uk/",
