--- a/components/nds-panel/package.json
+++ b/components/nds-panel/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@nice-digital/nds-panel",
-	"version": "2.0.11-alpha.0",
+	"version": "3.0.0",
 	"description": "Panel component for the NICE Design System",
 	"keywords": [
 		"panel"
@@ -41,7 +41,7 @@
 		"react-dom": "^16 || ^17 || ^18"
 	},
 	"dependencies": {
-		"@nice-digital/nds-core": "^2.0.11-alpha.0",
+		"@nice-digital/nds-core": "^3.0.0",
 		"classnames": "^2.2.6",
 		"prop-types": "^15.7.2"
 	},
