--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -2,48 +2,48 @@
 	"name": "@nice-digital/design-system-documentation",
 	"private": true,
 	"description": "Documentation for the NICE Design System",
-	"version": "2.0.14-alpha.0",
+	"version": "3.0.0",
 	"author": "Warren Keith <warren.keith@nice.org.uk>",
 	"keywords": [
 		"gatsby"
 	],
 	"dependencies": {
-		"@nice-digital/design-system": "^3.0.14-alpha.0",
-		"@nice-digital/icons": "^4.0.1-alpha.0",
-		"@nice-digital/nds-a-z-list": "^2.0.11-alpha.0",
-		"@nice-digital/nds-action-banner": "^2.0.11-alpha.0",
-		"@nice-digital/nds-alert": "^2.0.11-alpha.0",
-		"@nice-digital/nds-alphabet": "^1.0.11-alpha.0",
-		"@nice-digital/nds-breadcrumbs": "^2.0.11-alpha.0",
-		"@nice-digital/nds-button": "^2.0.11-alpha.0",
-		"@nice-digital/nds-callout": "^2.0.11-alpha.0",
-		"@nice-digital/nds-card": "^2.0.11-alpha.0",
-		"@nice-digital/nds-checkbox": "^2.0.11-alpha.0",
-		"@nice-digital/nds-column-list": "^2.0.12-alpha.0",
-		"@nice-digital/nds-container": "^2.0.11-alpha.0",
-		"@nice-digital/nds-core": "^2.0.11-alpha.0",
-		"@nice-digital/nds-enhanced-pagination": "^2.0.11-alpha.0",
-		"@nice-digital/nds-filters": "^3.0.11-alpha.0",
-		"@nice-digital/nds-form-group": "^2.0.11-alpha.0",
-		"@nice-digital/nds-forms": "^2.0.11-alpha.0",
-		"@nice-digital/nds-full-bleed": "^2.0.11-alpha.0",
-		"@nice-digital/nds-grid": "^2.0.12-alpha.0",
-		"@nice-digital/nds-hero": "^2.0.12-alpha.0",
-		"@nice-digital/nds-horizontal-nav": "^2.0.11-alpha.0",
-		"@nice-digital/nds-in-page-nav": "^2.0.11-alpha.0",
-		"@nice-digital/nds-input": "^2.0.11-alpha.0",
-		"@nice-digital/nds-maintain-ratio": "^2.0.11-alpha.0",
-		"@nice-digital/nds-page-header": "^2.0.11-alpha.0",
-		"@nice-digital/nds-panel": "^2.0.11-alpha.0",
-		"@nice-digital/nds-phase-banner": "^2.0.11-alpha.0",
-		"@nice-digital/nds-prev-next": "^2.0.11-alpha.0",
-		"@nice-digital/nds-radio": "^2.0.11-alpha.0",
-		"@nice-digital/nds-simple-pagination": "^2.0.11-alpha.0",
-		"@nice-digital/nds-stacked-nav": "^2.0.11-alpha.0",
-		"@nice-digital/nds-table": "^2.0.11-alpha.0",
-		"@nice-digital/nds-tabs": "^2.0.11-alpha.0",
-		"@nice-digital/nds-tag": "^2.0.11-alpha.0",
-		"@nice-digital/nds-textarea": "^2.0.11-alpha.0"
+		"@nice-digital/design-system": "^4.0.0",
+		"@nice-digital/icons": "^5.0.0",
+		"@nice-digital/nds-a-z-list": "^3.0.0",
+		"@nice-digital/nds-action-banner": "^3.0.0",
+		"@nice-digital/nds-alert": "^3.0.0",
+		"@nice-digital/nds-alphabet": "^2.0.0",
+		"@nice-digital/nds-breadcrumbs": "^3.0.0",
+		"@nice-digital/nds-button": "^3.0.0",
+		"@nice-digital/nds-callout": "^3.0.0",
+		"@nice-digital/nds-card": "^3.0.0",
+		"@nice-digital/nds-checkbox": "^3.0.0",
+		"@nice-digital/nds-column-list": "^3.0.0",
+		"@nice-digital/nds-container": "^3.0.0",
+		"@nice-digital/nds-core": "^3.0.0",
+		"@nice-digital/nds-enhanced-pagination": "^3.0.0",
+		"@nice-digital/nds-filters": "^4.0.0",
+		"@nice-digital/nds-form-group": "^3.0.0",
+		"@nice-digital/nds-forms": "^3.0.0",
+		"@nice-digital/nds-full-bleed": "^3.0.0",
+		"@nice-digital/nds-grid": "^3.0.0",
+		"@nice-digital/nds-hero": "^3.0.0",
+		"@nice-digital/nds-horizontal-nav": "^3.0.0",
+		"@nice-digital/nds-in-page-nav": "^3.0.0",
+		"@nice-digital/nds-input": "^3.0.0",
+		"@nice-digital/nds-maintain-ratio": "^3.0.0",
+		"@nice-digital/nds-page-header": "^3.0.0",
+		"@nice-digital/nds-panel": "^3.0.0",
+		"@nice-digital/nds-phase-banner": "^3.0.0",
+		"@nice-digital/nds-prev-next": "^3.0.0",
+		"@nice-digital/nds-radio": "^3.0.0",
+		"@nice-digital/nds-simple-pagination": "^3.0.0",
+		"@nice-digital/nds-stacked-nav": "^3.0.0",
+		"@nice-digital/nds-table": "^3.0.0",
+		"@nice-digital/nds-tabs": "^3.0.0",
+		"@nice-digital/nds-tag": "^3.0.0",
+		"@nice-digital/nds-textarea": "^3.0.0"
 	},
 	"devDependencies": {
 		"gatsby": "^2.17.6",
