--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "icons:webfont": "npm run icons -- webfont",
     "icons:readme": "npm run icons -- readme",
     "// DOCUMENTATION": "",
-    "docs:dev": "lerna run --stream --no-prefix --scope=@nice-digital/design-system-documentation start",
-    "docs:clean": "lerna run --stream --no-prefix --scope=@nice-digital/design-system-documentation clean",
-    "docs:build": "lerna run --stream --scope=@nice-digital/design-system-documentation build",
-    "docs:serve": "lerna run --stream --scope=@nice-digital/design-system-documentation serve",
+    "docs:dev": "lerna run --stream --no-prefix --scope=@nice-digital/design-system-docs dev",
+    "docs:clean": "lerna run --stream --no-prefix --scope=@nice-digital/design-system-docs clean",
+    "docs:build": "lerna run --stream --scope=@nice-digital/design-system-docs build",
+    "docs:serve": "lerna run --stream --scope=@nice-digital/design-system-docs serve",
     "// LERNA": "",
     "lerna": "lerna",
     "bootstrap": "lerna bootstrap",
@@ -60,14 +60,22 @@
     "node": ">= 18.12.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.19.6",
+    "@babel/plugin-transform-runtime": "^7.19.6",
+    "@babel/preset-env": "^7.19.4",
+    "@babel/preset-flow": "^7.18.6",
+    "@babel/preset-react": "^7.18.6",
+    "@babel/preset-typescript": "^7.18.6",
+    "@nrwl/nx-cloud": "latest",
+    "cross-env": "^7.0.3",
     "lerna": "^6.0.1",
-    "nx": "15.0.3",
-    "@nrwl/nx-cloud": "latest"
+    "nx": "15.0.3"
   },
   "volta": {
     "node": "18.12.0"
   },
   "workspaces": [
-    "./components/*"
+    "./components/*",
+    "./docs"
   ]
 }
