--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "Monorepo for the NICE Design System",
   "scripts": {
     "start": "npm run dev",
-    "dev": "concurrently npm:build:es:watch npm:devapp npm:storybook npm:docs:dev",
+    "dev": "concurrently npm:build:es:watch npm:docs:dev",
     "// ICONS": "",
     "icons": "lerna run --stream --scope=@nice-digital/icons",
     "icons:start": "npm run icons -- start",
@@ -15,9 +15,6 @@
     "icons:readme": "npm run icons -- readme",
     "// DOCUMENTATION": "",
     "docs:dev": "lerna run --stream --no-prefix --scope=@nice-digital/design-system-docs dev",
-    "docs:clean": "lerna run --stream --no-prefix --scope=@nice-digital/design-system-docs clean",
-    "docs:build": "lerna run --stream --scope=@nice-digital/design-system-docs build",
-    "docs:serve": "lerna run --stream --scope=@nice-digital/design-system-docs serve",
     "// LERNA": "",
     "lerna": "lerna",
     "bootstrap": "lerna bootstrap",
@@ -67,6 +64,7 @@
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
     "@nrwl/nx-cloud": "latest",
+    "concurrently": "^7.5.0",
     "cross-env": "^7.0.3",
     "lerna": "^6.0.1",
     "nx": "15.0.3"
