--- a/docs/package.json
+++ b/docs/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "glob": "^8.0.3",
     "next": "13.0.0",
     "next-transpile-modules": "^9.1.0",
     "react": "18.2.0",
