--- a/package.json
+++ b/package.json
@@ -67,7 +67,8 @@
     "concurrently": "^7.5.0",
     "cross-env": "^7.0.3",
     "lerna": "^6.0.1",
-    "nx": "15.0.3"
+    "nx": "15.0.3",
+    "typescript": "^4.8.4"
   },
   "volta": {
     "node": "18.12.0"
