--- a/package.json
+++ b/package.json
@@ -66,13 +66,16 @@
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
     "@nrwl/nx-cloud": "latest",
+    "@testing-library/jest-dom": "^5.16.5",
     "concurrently": "^7.5.0",
     "cross-env": "^7.0.3",
     "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
     "lerna": "^6.0.1",
     "nx": "15.0.3",
     "ts-jest": "^29.0.3",
+    "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
   },
   "volta": {
