--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
 		"forceConsistentCasingInFileNames": true,
 		"strict": true,
 		"skipLibCheck": true,
-		"types": ["jest"]
+		"types": ["jest", "@testing-library/jest-dom"]
 	},
 	"files": [],
 	"exclude": ["node_modules"],
