--- a/components/nds-alphabet/package.json
+++ b/components/nds-alphabet/package.json
@@ -40,6 +40,7 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.3",
     "@types/jest": "^29.2.2",
     "typescript": "^4.8.4"
   }
