--- a/docs/package.json
+++ b/docs/package.json
@@ -21,6 +21,7 @@
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/user-event": "^14.4.3",
     "@types/jest": "^29.2.2",
     "@types/node": "18.11.7",
     "@types/react": "18.0.24",
