--- a/docs/package.json
+++ b/docs/package.json
@@ -13,6 +13,7 @@
     "@mdx-js/loader": "^2.1.5",
     "@mdx-js/react": "^2.1.5",
     "@next/mdx": "^13.0.1",
+    "@nice-digital/global-nav": "^5.0.916",
     "glob": "^8.0.3",
     "next": "13.0.0",
     "next-transpile-modules": "^9.1.0",
