--- a/components/icons/package.json
+++ b/components/icons/package.json
@@ -56,11 +56,13 @@
 	},
 	"gitHead": "b70a1e39df19c1943a000c841aca8d9bb3ef4ff1",
 	"devDependencies": {
+		"@svgr/cli": "^6.5.1",
 		"@testing-library/jest-dom": "^5.16.5",
 		"@testing-library/react": "^13.4.0",
 		"@testing-library/user-event": "^14.4.3",
 		"@types/jest": "^29.2.2",
 		"@types/node": "^18.11.9",
+		"doctoc": "^2.2.1",
 		"fantasticon": "^1.2.3",
 		"typescript": "^4.8.4"
 	}
