--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "icons:readme": "npm run icons -- readme",
     "// DOCUMENTATION": "",
     "docs:dev": "lerna run --stream --no-prefix --scope=@nice-digital/design-system-docs dev",
+    "docs:build": "lerna run --stream --no-prefix --scope=@nice-digital/design-system-docs build",
     "// LERNA": "",
     "lerna": "lerna",
     "bootstrap": "lerna bootstrap",
@@ -69,13 +70,19 @@
     "@nrwl/nx-cloud": "latest",
     "@testing-library/jest-dom": "^5.16.5",
     "@types/node": "^18.11.9",
+    "@typescript-eslint/eslint-plugin": "^5.45.1",
+    "@typescript-eslint/parser": "^5.45.1",
     "concurrently": "^7.5.0",
     "cross-env": "^7.0.3",
+    "eslint": "^8.29.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
     "lerna": "^6.0.1",
     "nx": "15.0.3",
+    "prettier": "2.8.0",
     "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
