--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
 	"exclude": ["node_modules"],
 	"references": [
 		{ "path": "./components/nds-action-banner" },
+		{ "path": "./components/nds-alert" },
 		{ "path": "./components/nds-breadcrumbs" },
 		{ "path": "./components/nds-button" },
 		{ "path": "./components/nds-container" },
