--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,7 @@
 		{ "path": "./components/nds-alphabet" },
 		{ "path": "./components/nds-breadcrumbs" },
 		{ "path": "./components/nds-button" },
+		{ "path": "./components/nds-checkbox" },
 		{ "path": "./components/nds-container" },
 		{ "path": "./components/nds-grid" },
 		{ "path": "./components/nds-hero" },
