--- a/components/nds-input/package.json
+++ b/components/nds-input/package.json
@@ -5,16 +5,12 @@
 	"author": "Warren Keith <warren.keith@nice.org.uk>",
 	"homepage": "https://nice-digital.github.io/nice-design-system/",
 	"license": "MIT",
-	"main": "lib/Input.js",
-	"module": "es/Input.js",
+	"main": "es/Input.js",
 	"style": "scss/input.scss",
-	"types": "nds-input.d.ts",
 	"directories": {
-		"lib": "lib",
-		"test": "__tests__"
+		"lib": "es"
 	},
 	"files": [
-		"lib",
 		"es",
 		"scss",
 		"*.d.ts"
@@ -35,8 +31,7 @@
 	},
 	"dependencies": {
 		"@nice-digital/nds-core": "^3.0.2",
-		"classnames": "^2.2.6",
-		"prop-types": "^15.7.2"
+		"classnames": "^2.2.6"
 	},
 	"devDependencies": {
 		"@babel/cli": "^7.5.0",
