--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,7 @@
 		{ "path": "./components/nds-breadcrumbs" },
 		{ "path": "./components/nds-button" },
 		{ "path": "./components/nds-checkbox" },
+		{ "path": "./components/nds-column-list" },
 		{ "path": "./components/nds-container" },
 		{ "path": "./components/nds-grid" },
 		{ "path": "./components/nds-hero" },
