--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,7 @@
 		{ "path": "./components/nds-column-list" },
 		{ "path": "./components/nds-container" },
 		{ "path": "./components/nds-enhanced-pagination" },
+		{ "path": "./components/nds-form-group" },
 		{ "path": "./components/nds-grid" },
 		{ "path": "./components/nds-hero" },
 		{ "path": "./components/nds-input" },
