--- a/components/design-system/package.json
+++ b/components/design-system/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@nice-digital/design-system",
-	"version": "5.0.13-alpha.0",
+	"version": "5.0.13",
 	"description": "Your source for quickly creating consistent on-brand NICE digital services",
 	"author": "Ian Routledge <ian.routledge@nice.org.uk>",
 	"homepage": "https://design-system.nice.org.uk/",
@@ -51,7 +51,7 @@
 		"@nice-digital/nds-grid": "^4.0.7",
 		"@nice-digital/nds-hero": "^4.0.6",
 		"@nice-digital/nds-horizontal-nav": "^4.0.6",
-		"@nice-digital/nds-in-page-nav": "^4.0.7-alpha.0",
+		"@nice-digital/nds-in-page-nav": "^4.0.7",
 		"@nice-digital/nds-input": "^4.0.6",
 		"@nice-digital/nds-maintain-ratio": "^4.0.6",
 		"@nice-digital/nds-page-header": "^4.0.6",
