--- a/components/nds-a-z-list/package.json
+++ b/components/nds-a-z-list/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@nice-digital/nds-a-z-list",
-	"version": "4.0.7",
+	"version": "4.0.8-alpha.0",
 	"description": "A to Z list component for the NICE Design System",
 	"main": "es/AZList.js",
 	"types": "es/AZList.d.ts",
@@ -32,7 +32,7 @@
 	"homepage": "https://design-system.nice.org.uk/",
 	"license": "MIT",
 	"dependencies": {
-		"@nice-digital/nds-core": "^4.0.6"
+		"@nice-digital/nds-core": "^4.0.7-alpha.0"
 	},
 	"devDependencies": {
 		"@testing-library/jest-dom": "^5.16.5",
