--- a/components/nds-breadcrumbs/package.json
+++ b/components/nds-breadcrumbs/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@nice-digital/nds-breadcrumbs",
-	"version": "4.0.6",
+	"version": "4.0.7-alpha.0",
 	"description": "Breadcrumbs component for the NICE Design System",
 	"keywords": [
 		"breadcrumbs"
@@ -31,7 +31,7 @@
 		"url": "https://github.com/nice-digital/nice-design-system/issues"
 	},
 	"dependencies": {
-		"@nice-digital/nds-core": "^4.0.6",
+		"@nice-digital/nds-core": "^4.0.7-alpha.0",
 		"classnames": "^2.3.1"
 	},
 	"peerDependencies": {
