--- a/components/nds-textarea/package.json
+++ b/components/nds-textarea/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@nice-digital/nds-textarea",
-	"version": "4.0.6",
+	"version": "4.0.7-alpha.0",
 	"description": "Textarea component for the NICE Design System",
 	"author": "Warren Keith <warren.keith@nice.org.uk>",
 	"homepage": "https://nice-digital.github.io/nice-design-system/",
@@ -31,7 +31,7 @@
 		"url": "https://github.com/nice-digital/nice-design-system/issues"
 	},
 	"dependencies": {
-		"@nice-digital/nds-core": "^4.0.6",
+		"@nice-digital/nds-core": "^4.0.7-alpha.0",
 		"classnames": "^2.2.6"
 	},
 	"peerDependencies": {
