--- a/components/nds-accordion/package.json
+++ b/components/nds-accordion/package.json
@@ -32,7 +32,7 @@
 		"url": "https://github.com/nice-digital/nice-design-system/issues"
 	},
 	"dependencies": {
-		"@nice-digital/nds-core": "^4.1.2-alpha.0",
+		"@nice-digital/nds-core": "^4.0.17-alpha-node-update.0",
 		"classnames": "^2.5.1"
 	},
 	"peerDependencies": {
@@ -48,5 +48,5 @@
 		"jest-extended": "^4.0.2",
 		"typescript": "^5.9.3"
 	},
-	"gitHead": "463269d9aad4bad626f6798a5a145f41e73badb7"
+	"gitHead": "e75957040c9acfbd7eeb164cad724e3b48760679"
 }
